Fix website getting cut off when height is smaller. No longer centers all content.

--- a/css/siteStyle.css
+++ b/css/siteStyle.css
@@ -7,12 +7,9 @@ body {
     background-attachment: fixed;
 }
 
-.content {
+div.content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-
     background-color: transparent;
 }
 
